maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:3: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for (j <- 1 to getMondeLargeur()){
         ^